--- a/ModularConnect.html
+++ b/ModularConnect.html
@@ -14,7 +14,6 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
 
   <body class="container">
@@ -226,5 +225,7 @@
             renderInputParams(inputParams,"inputForm");
         });
     </script>
+    <script src="./libreries/CryptoJS v3.1.2/rollups/hmac-sha256.js"></script>
+    <script src="./libreries/CryptoJS v3.1.2/components/enc-base64.js"></script>
   </body
 </html>
